[Picture in Picture] Fix button click in RTL mode

Fix button click in RTL mode by changing GetCloseControlsBounds()
to use GetMirroredBounds(). Also removes the OnMouseEvent button
handlers as Button will do this.

BUG=867389

Change-Id: Iaeb8a8059593592da2ad59c57cf0d98b128a47ca
Reviewed-on: https://chromium-review.googlesource.com/1153783
Reviewed-by: apacible <apacible@chromium.org>
Commit-Queue: Becca Hughes <beccahughes@chromium.org>
Cr-Commit-Position: refs/heads/master@{#579072}
Former-commit-id: 64a3d2da689ff2ce03ec89332a9b2e1d663a2e08